# wingz-django-assessment

./: .gitignore  README.md  pyproject.toml
api/: middleware.py  permissions.py  settings.py  urls.py
api/api/: settings.py
api/rides/: models.py
api/users/: models.py
rides/: filters.py  models.py  serializers.py  views.py
rides/management/commands/: generate_rides.py
rides/migrations/: 0001_initial.py  0002_initial.py  0003_alter_ride_status.py  0003_alter_ride_status_alter_rideevent_id_ride.py  0004_alter_ride_status.py
rides/tests/: factories.py
users/: models.py  serializers.py  views.py
users/management/commands/: generate_users.py
users/migrations/: 0001_initial.py  0002_alter_user_role.py  0003_alter_user_options_user_date_joined_user_is_active_and_more.py
users/tests/: factories.py
